0.4.2
------

- --command and --options can now be used simultaneously, as long as they are at the end of the command.
- The Gateway installer script now updates the Rust version and libraries