@@ -19,7 +19,7 @@ pub fn deploy(
     let (command, options) = crate::utils::parse_cmd_opt(command, options);
 
     //We then create the command before sending it to the ssh_command() function
-    let cmd = format!("docker pull {image} && docker run --name container -v /home/container/container_fs:/var --network=host --privileged --cap-add=ALL {options} {image} {command} && docker container ls -a",
+    let cmd = format!("docker pull {image} && docker run --name container {options} -v /home/container/container_fs:/var --network=host --privileged --cap-add=ALL {image} {command} && docker container ls -a",
         options = match options {
             None => format!(""),
             Some(content) => content
@@ -28,7 +28,7 @@ pub fn deploy(
         //If the command is empty, we don't add double quotes.
         command = match command {
             None => format!(""),
-            Some(content) => format!("\"{}\"", content)
+            Some(content) => content
         }
     );
 
