@@ -3,3 +3,4 @@
 
 - --command and --options can now be used simultaneously, as long as they are at the end of the command.
 - The Gateway installer script now updates the Rust version and libraries
+- Removed the -c and -o shorthand flags for --command and --options to avoid confusion when dealing with Docker arguments
